<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        tools:context=".ui.fragments.AddFragment">

        <ProgressBar
            android:id="@+id/progressBarBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/brandSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            style="@style/Profile.Spinner" />

        <ProgressBar
            android:id="@+id/progressBarModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/modelSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            style="@style/Profile.Spinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/classSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/class_entries"
            style="@style/Profile.Spinner" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/engineTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/engine_type_values"
            style="@style/Profile.Spinner" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceIL"
            style="@style/Profile.InputLayout.Single.Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/applyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal_16"
            android:text="@string/apply" />

    </LinearLayout>

</ScrollView>