<resources>
    <string name="app_name">CarsDB</string>

    <string name="sort_title">Sorting</string>

    <string name="values_brand">brand</string>
    <string name="values_model">model</string>
    <string name="values_price">price</string>
    <string name="values_class">class</string>
    <string name="values_engine_type">engine_type</string>

    <string name="by_model">By model</string>
    <string name="by_price">By price</string>
    <string name="by_class">By class</string>
    <string name="by_brand">By brand</string>
    <string name="by_engine_type">By engine type</string>

    <string name="model">Model</string>
    <string name="date_of_issue">Date of issue</string>
    <string name="manufacturer">Producer</string>
    <string name="apply">Apply</string>
    <string name="dark_mode">Dark theme</string>
    <string name="settings">Settings</string>
    <string name="cars">Cars</string>
    <string name="add_or_replace">Add / Modify</string>
    <string name="model_item">Model:</string>
    <string name="date_of_issue_item">Date of issue:</string>
    <string name="producer_item">Producer:</string>
    <string name="invalid_string">Invalid string</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>

    <string name="A_category">A: mini cars</string>
    <string name="B_category">B: small cars</string>
    <string name="C_category">C: medium cars</string>
    <string name="D_category">D: large cars</string>
    <string name="E_category">E: executive cars</string>
    <string name="F_category">F: luxury cars</string>
    <string name="J_category">J: sport utility cars (including off-road vehicles)</string>
    <string name="M_category">M: Multi purpose cars (including pickup)</string>
    <string name="S_category">S: Sports cars</string>

    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="gas">Gas</string>
    <string name="electricity">Electricity</string>
    <string name="hybrid">Hybrid</string>
    <string name="class_hint">Class</string>
    <string name="engine_type_hint">Engine type</string>
    <string name="title">%1$s %2$s</string>
    <string name="undo">Undo</string>
    <string name="deleted_item">Successfully deleted item</string>

    <string name="theme_prefs" translatable="false">theme</string>
    <string name="sort_prefs" translatable="false">sort</string>
</resources>